--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ a:hover {
    line-height: 1.5em;
 }
 
+.navbar-default a.navbar-brand:hover {
+  color: #dd42ff;
+}
+
 ul.nav.navbar-nav {
   margin-left: 15px;
 }
@@ -81,4 +85,19 @@ ul.nav.navbar-nav > li a:hover {
 .featurette-heading {
   line-height: 1.5em;
   font-size: 3em;
+}
+
+
+@media only screen and (max-width: 480px) {
+  body {
+    background-attachment: scroll;
+  }
+
+  .container {
+    margin-left: auto;
+  }
+
+  .featurette {
+   width: 100%;
+  }
 }
