--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Make something awesome! */
 body {
  background: #fff url('fuller_us.png') no-repeat top right;
  background-attachment:fixed;
@@ -7,9 +6,10 @@ body {
 
 a {
   font-weight: bold;
+  color: #0084c8;
 }
 a:hover {
-  color: #65D9E3;
+  color: #000;
   text-decoration: none;
 }
 
@@ -24,7 +24,7 @@ a:hover {
 }
 
 .navbar-default a.navbar-brand {
-   color: #000000;
+   color: #0084c8;
    font-family: 'Lato', Helvetica, Arial, sans-serif;
    font-weight: 900;
    font-size: 4.4em;
@@ -36,7 +36,7 @@ a:hover {
 }
 
 .navbar-default a.navbar-brand:hover {
-  color: #000000;
+  color: #0084c8;
 }
 
 ul.nav.navbar-nav {
@@ -46,7 +46,7 @@ ul.nav.navbar-nav {
 ul.nav.navbar-nav > li a {
   font-size: 1.3em;
   background-color: transparent;
-  color: #000000;
+  color: #000;
 }
 
 ul.nav.navbar-nav > li.active a{
@@ -56,7 +56,7 @@ ul.nav.navbar-nav > li.active a{
 }
 
 ul.nav.navbar-nav > li a:hover {
-  color: #65D9E3;
+  color: #0084c8;
 }
 
 .byline {
