Adding notice about 1st user meeting to main splash per David/Rollie

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: #fff url('fuller_us.png') no-repeat 100% 0;
+  background: #fff url('fuller_us_flag.png') no-repeat 100% 0;
   background-attachment:fixed;
   font-size: 14px;
 }
@@ -247,5 +247,11 @@ footer {
   }
   .featurette {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 630px) {
+  body {
+    background: #fff url('fuller_us.png') no-repeat 100% 0 !important;
   }
 }
