new QGIS3 IT logo! Thanks Totò

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ hr {
 }
 
 .navbar-brand {
-  background: #fff url('images/qgis-it.png') no-repeat 20px 2px;
+  background: #fff url('images/qgis3-it.png') no-repeat 20px 2px;
   height: 67px;
   width: 100px;
 }
