Processing tests guide added, css small addition and index small changes

--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,11 @@ ul.page-nav li {
   font-size: 3em;
 }
 
+.featurette-heading-minus {
+  line-height: 1.5em;
+  font-size: 2em;
+}
+
 footer {
   background: #fff;
   opacity: 0.7;
